# test-rocket-app

./: .dockerignore  .env  .env.docker  .gitignore  .rustfmt.toml  Cargo.toml  README.md  Rocket.toml  api.dockerfile  bors.toml  docker-compose.yml  journali.sh  migrate.sh  package.json  rustfmt.toml  traefik.toml  web.dockerfile  webpack.config.js
.github/workflows/: publish.yml  rust.yml  web.yml
app/: TestRocketApp.vue  index.html  index.js  style.css
app/services/: UserService.js
migrations/2020-02-18-150457_create_users/: up.sql
migrations/2020-02-18-150459_create_items/: down.sql  up.sql
migrations/2020-02-18-151226_create_tags/: down.sql  up.sql
public/: index.html  main.js  script.js  style.css
src/: database.rs  lib.rs  models.rs  schema.rs
src/controllers/: mod.rs  users.rs
src/repositories/: users.rs
