[package]
name = "test-rocket-app"
version = "0.1.0"
authors = ["Wesley Klop <wesley19097@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["uuid", "json"] }
diesel = { version = "1.4.3", features = ["postgres", "uuidv07"] }
dotenv = "0.9.0"
uuid = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"